# Gallery-Generate-Agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_ORGANIZATION.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SRC_LAYOUT_UPDATE.md  config.json  main.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: INSTALLATION.md  USER_GUIDE.md
outputs/: styles.css
src/gallery_generator/: __init__.py  __main__.py
src/gallery_generator/core/: __init__.py  classifier.py  feature_extractor.py  gallery_generator.py  image_analyzer.py
src/gallery_generator/gui/: __init__.py  main_window.py
src/gallery_generator/gui/components/: __init__.py  folder_selector.py  preview_panel.py  progress_dialog.py
tests/: test_basic.py
